--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,18 @@ language: java
 
 before_install:
  - cd api
- - chmod +x gradlew wrapper
+ - gradle wrapper
+ - chmod +x gradlew
 
 jdk: oraclejdk10
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
 
 after_success:
   - javadoc -sourcepath "api/src/main/java"
