--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'chingdim.Javablox'
+group 'io.github.tclrainbow.Javablox'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
