--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,6 @@ language: java
 
 before_install:
  - chmod +x gradlew
+ - export AUTHOR_NAME="$(git log -1 $TRAVIS_COMMIT --pretty="%aN")"
 
 jdk: oraclejdk10
