Add Gradle new wrapper task

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,11 @@ repositories {
     mavenCentral()
 }
 
+wrapper {
+    gradleVersion = 5.0
+    distributionType = wrapper.DistributionType.BIN
+}
+
 dependencies {
     runtimeOnly project(':API')
 }
