--- a/API/build.gradle
+++ b/API/build.gradle
@@ -6,3 +6,8 @@ group 'io.github.rbxapi'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.11
+
+wrapper{
+    gradleVersion = '5.2.1'
+    distributionType = Wrapper.DistributionType.BIN
+}
