--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ repositories {
 }
 
 wrapper{
-    gradleVersion = 5.0
+    gradleVersion = '5.2.1'
     distributionType = Wrapper.DistributionType.BIN
 }
 
