--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,17 @@
 language: java
+install: true
+
+script:
+ - ./gradlew build --scan -s
+
+before_cache:
+ - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+ - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
+cache:
+ directories:
+  - $HOME/.gradle/caches/
+  - $HOME/.gradle/wrapper/
 
 before_install:
  - chmod +x gradlew
