--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ install: true
 dist: xenial
 
 script:
- - ./gradlew build --scan -s
  - gpg --export-secret-key ${GPG_KEY_ID} > travis.gpg
  - travis encrypt-file travis.jpg
  - shred --remove travis.gpg
+ - ./gradlew build --scan -s -PmavenUser=${mavenUser} -PmavenPassword=${mavenPassword} -Psigning.keyId=${GPG_KEY_ID} Psigning.password=${GPG_KEY_PASSPHRASE} -Psigning.secretKeyRingFile=travis.gpg
  - ./gradlew publish -PmavenUser=${mavenUser} -PmavenPassword=${mavenPassword} -Psigning.keyId=${GPG_KEY_ID} Psigning.password=${GPG_KEY_PASSPHRASE} -Psigning.secretKeyRingFile=travis.gpg
 
 before_cache:
