--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: java
 install: true
 dist: xenial
 script:
-- "./gradlew build --scan -s -PmavenUser=${mavenUser} -PmavenPassword=${mavenPassword}
-  -Psigning.keyId=${GPG_KEY_ID} -Psigning.password=${GPG_KEY_PASSPHRASE} -Psigning.secretKeyRingFile=travis.gpg"
+- "./gradlew build --scan -s"
 before_cache:
 - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
 - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
@@ -14,8 +13,9 @@ cache:
 before_install:
 - chmod +x gradlew
 - chmod +x deploy.sh
-- "./gradlew wrapper -PmavenUser=${mavenUser} -PmavenPassword=${mavenPassword} -Psigning.keyId=${GPG_KEY_ID}
-  -Psigning.password=${GPG_KEY_PASSPHRASE} -Psigning.secretKeyRingFile=travis.gpg"
+- openssl aes-256-cbc -K $encrypted_b8b4d31050a3_key -iv $encrypted_b8b4d31050a3_iv -in travis.gpg.enc -out travis.gpg -d
+- openssl aes-256-cbc -K $encrypted_b8b4d31050a3_key -iv $encrypted_b8b4d31050a3_iv -in gradle.properties.enc -out gradle.properties -d
+- "./gradlew wrapper"
 jdk: oraclejdk11
 after_success:
 - "./deploy.sh"
