--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ cache:
 before_install:
 - chmod +x gradlew
 - chmod +x deploy.sh
-- openssl aes-256-cbc -K $encrypted_b8b4d31050a3_key -iv $encrypted_b8b4d31050a3_iv -in travis.gpg.enc -out travis.gpg -d
-- openssl aes-256-cbc -K $encrypted_b8b4d31050a3_key -iv $encrypted_b8b4d31050a3_iv -in gradle.properties.enc -out gradle.properties -d
+- openssl aes-256-cbc -K $encrypted_b8b4d31050a3_key -iv $encrypted_b8b4d31050a3_iv -in secrets.tar.enc -out secrets.tar -d
+- tar xvf secrets.tar
 - "./gradlew wrapper"
 jdk: oraclejdk11
 after_success:
