--- a/javablox-endpoint/build.gradle
+++ b/javablox-endpoint/build.gradle
@@ -79,53 +79,53 @@ test {
 }
 
 
-//publishing {
-//    publications {
-//        mavenJava(MavenPublication) {
-//            artifactId = 'javablox-endpoint'
-//            from components.java
-//            artifact sourcesJar
-//            artifact javadocJar
-//            pom {
-//                name = 'Javablox Endpoint'
-//                description = 'Implementation of raw IO for Javablox'
-//                url = 'https://github.com/rbxapi/javablox'
-//                licenses {
-//                    license {
-//                        name = 'MIT License'
-//                        url = 'https://github.com/RbxAPI/Javablox/blob/master/LICENSE.md'
-//                    }
-//                }
-//                developers {
-//                    developer {
-//                        id = 'ChingDim'
-//                        name = 'ChingDim'
-//                    }
-//                }
-//                scm {
-//                    connection = 'scm:git:git://github.com/RbxAPI/Javablox.git'
-//                    developerConnection = 'scm:git:ssh://github.com/RbxAPI/Javablox.git'
-//                    url = 'http://github.com/RbxAPI/Javablox/'
-//                }
-//            }
-//        }
-//    }
-//    repositories {
-//        maven {
-//            credentials {
-//                username "$mavenUser"
-//                password "$mavenPassword"
-//            }
-//            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
-//            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots"
-//            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
-//        }
-//    }
-//}
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifactId = 'javablox-endpoint'
+            from components.java
+            artifact sourcesJar
+            artifact javadocJar
+            pom {
+                name = 'Javablox Endpoint'
+                description = 'Implementation of raw IO for Javablox'
+                url = 'https://github.com/rbxapi/javablox'
+                licenses {
+                    license {
+                        name = 'MIT License'
+                        url = 'https://github.com/RbxAPI/Javablox/blob/master/LICENSE.md'
+                    }
+                }
+                developers {
+                    developer {
+                        id = 'ChingDim'
+                        name = 'ChingDim'
+                    }
+                }
+                scm {
+                    connection = 'scm:git:git://github.com/RbxAPI/Javablox.git'
+                    developerConnection = 'scm:git:ssh://github.com/RbxAPI/Javablox.git'
+                    url = 'http://github.com/RbxAPI/Javablox/'
+                }
+            }
+        }
+    }
+    repositories {
+        maven {
+            credentials {
+                username "$mavenUser"
+                password "$mavenPassword"
+            }
+            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
+            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots"
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+        }
+    }
+}
 
-//signing {
-//    sign publishing.publications.mavenJava
-//}
+signing {
+    sign publishing.publications.mavenJava
+}
 
 
 javadoc {
