--- a/javablox-api/build.gradle
+++ b/javablox-api/build.gradle
@@ -9,6 +9,7 @@ group 'io.github.rbxapi'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.11
+ext.moduleName = 'io.github.rbxapi.javablox.api'
 
 
 task sourcesJar(type: Jar, dependsOn: classes) {
