Fix Javadoc module path

--- a/build.gradle
+++ b/build.gradle
@@ -136,7 +136,6 @@ signing {
 
 
 javadoc {
-    if (JavaVersion.current().isJava9Compatible()) {
-        options.addBooleanOption('html5', true)
-    }
+    options.addBooleanOption('html5', true)
+    options.addStringOption('-module-path', classpath.asPath)
 }
