--- a/build.gradle
+++ b/build.gradle
@@ -137,3 +137,8 @@ publishing {
         }
     }
 }
+
+buildScan {
+    termsOfServiceUrl = 'https://gradle.com/terms-of-service'
+    termsOfServiceAgree = 'yes'
+}
